Correcció error tipogràfic

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="titols">
       <h1>Roger Rubio</h1></div>
     <nav class="container-flex">
-     <button class="flex-2 boto" onclick="location.href='g'" type="button">Qui soc</button>
+     <button class="flex-2 boto" onclick="location.href='g'" type="button">Qui sóc</button>
      <button class="flex-2 boto" onclick="location.href='#feina'" type="button">Demo Reel</button>
      <button class="flex-2 boto" onclick="location.href='#hola'" type="button">Contacte</button>
     </nav>
