--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
         <div class="titols">
       <h1>Roger Rubio</h1></div>
     <nav class="container-flex">
-     <button class="flex-2 boto" onclick="location.href='g'" type="button">Qui sóc</button>
-     <button class="flex-2 boto" onclick="location.href='#feina'" type="button">Demo Reel</button>
-     <button class="flex-2 boto" onclick="location.href='#hola'" type="button">Contacte</button>
+        <button class="flex-2 boto" onclick="location.href='g'" type="button"><a href="#quisoc">Qui sóc</a></button>
+         <button class="flex-2 boto" onclick="location.href='#feina'" type="button"><a href="#demoreel">Demo Reel</a></button>
+         <button class="flex-2 boto" onclick="location.href='#hola'" type="button"><a href="#contacte">Contacte</a></button>
     </nav>
      <div class="titols">
         <h2>Animador i entorns 3D</h2></div>
      <div class="titols">
-      <p>Em dic Roger Rubio i tinc 19 anys, tinc el titol de grau mitjà de sistemes microinformàtics i xarxes, actualment estic curstant el grau superior d'animacio 3d, jocs i entorns interactius, també diré que he fet pràctiques a lavola de Manlleu on era ajudant del suport tècnic</p></div>
+      <p>Em dic Roger Rubio i tinc 19 anys, tinc el titol de grau mitjà de sistemes microinformàtics i xarxes, actualment estic cursant el grau superior d'animació 3d, jocs i entorns interactius, també diré que he fet pràctiques a lavola de Manlleu on era ajudant de suport tècnic</p></div>
      <div class="titols"></div>
      <div id="container2">
         <div id="quisoc">
-         <h2>Qui soc</h2>
-            <p>Les meves aficcions són veure pelis, jugar i escriure histories de superherois la qual m'agradaria ensenyar al món algun dia. M'encanta Marvel i l'anime d'aqui que tingui tantes histories, sóc una persona organitzada i sempre intento fer sentir bé a la gent del voltant, tinc carnet de cotxe i per acabar m'agradaria recalcar que la part que m'ha agredat mes del curs ha sigut fer animacions 3D i modelatge (que encara em costa). M'agradaria fer la carrera de multimedia a Vic ja que ho tinc molt aprop.</p>
+         <h2 id="quisoc">Qui soc</h2>
+            <p>Les meves aficions són veure pelis, jugar i escriure histories de superherois. M'encanta Marvel i l'anime d'aqui que tingui tantes histories, sóc una persona organitzada i sempre intento fer sentir bé a la gent del voltant, tinc carnet de cotxe i per acabar m'agradaria recalcar que la part que m'ha agredat mes del curs ha sigut fer animacions 3D i modelatge (que encara em costa). M'agradaria fer la carrera de multimèdia a Vic ja que ho tinc molt aprop i tinc amics que m'han parlat bé.</p>
          </div>
          <div class="titols2">
-         <h2>Demo Reel</h2>
+         <h2 id="demoreel">Demo Reel</h2>
             <div class="demoreel">
              <video class="mida" width="75%" controls>
              <source src="demoreel/VideoPresentacio.mp4" type="video/mp4">
@@ -40,14 +40,15 @@
                 </video></div>
              </div>
       <div class="titols2">
-          <h2>Edició i iluminació</h2></div>
+          <h2>Edició | modelatge | iluminació</h2></div>
      <div class="demoreel">
     <div class="container-display" width="75%">
-        <img class="mySlides" src="imatges/3llums.jpg" style="width:100%">
-        <img class="mySlides" src="imatges/calidifred.JPG" style="width:100%">
-        <img class="mySlides" src="imatges/logo6.jpg" style="width:100%">
-        <img class="mySlides" src="imatges/terrabasket.jpg" style="width:100%">
-
+        <img class="mySlides" src="imatges/3llums.jpg" style="width:100%" width="500" height="650">
+        <img class="mySlides" src="imatges/calidifred.JPG" style="width:100%" width="500" height="650">
+        <img class="mySlides" src="imatges/terrabasket.jpg" style="width:100%" width="500" height="650">
+          <img class="mySlides" src="imatges/llauna.jpg" style="width:100%" width="500" height="650">
+          <img class="mySlides" src="imatges/Escena3d.JPG" style="width:100%" width="500" height="650">
+         <img class="mySlides" src="imatges/casa.jpg" style="width:100%" width="500" height="650">
         <button class="boton-slider fletxaDreta-slider" onclick="plusDivs(-1)">&#10094;</button>
         <button class="boton-slider fletxaEsquerra-slider" onclick="plusDivs(1)">&#10095;</button>
          </div></div>
@@ -88,7 +89,7 @@
                 </video></div>
              </div>
          <div class="titols2">
-         <h2>Contacte</h2>
+         <h2 id="contacte">Contacte</h2>
              <div id="icones">
              <div id="tel">
             <img src="icones/phone.svg" alt="telefon" width="40" ><p>664425702</p></div>
